pages/services/beta-storage/0.2.0-beta/cli-references/dcos-storage-provider/dcos-storage-provider-remove/index.md
---
layout: layout.pug
navigationTitle: dcos storage provider remove
title: dcos storage provider remove
menuWeight: 0
notes: Code generated by docgen.go, DO NOT EDIT
enterprise: true
---
## dcos storage provider remove

Remove an existing volume provider.

### Synopsis

Arguments:

    <name>     The name of the volume provider to remove.

Remove an existing volume provider.

```bash
dcos storage provider remove <name> [flags]
```

### Examples

1. Create a volume provider then remove it again:

```bash
$ cat <<EOF | dcos storage provider create
{
    "name": "ssds",
    "spec": {
        "plugin": "lvm",
        "node": "c67efa5d-34fa-4bc5-8b21-2a5e0bd52385-S2",
        "plugin-configuration": {
            "devices": ["xvdb", "xvdc"]
        },
        "labels": {"rotational": "false"}
    }
}
EOF

$ dcos storage provider remove ssds
```

### Options inherited from parent commands

```bash
  -h, --help   Help for this command.
```

### SEE ALSO

* [dcos storage provider](../)	 - Manage volume providers.

